tests/compilefail01.out
[1mtests/compilefail01.pas:3:13: [0m[1m[91merror:[0m String literal 'This string will be too long to compile.123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890' exceeds 255 char max length.
     3 | 	writeln('This string will be too long to compile.123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890');