tests/compilefail01.pas
program compilefail01(output);
begin
	writeln('This string will be too long to compile.123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890');
end.
